-tweaked skiplist.h -organized everything

--- a/CodeBuild/CodeBuild/CodeBuild.vcxproj
+++ b/CodeBuild/CodeBuild/CodeBuild.vcxproj
@@ -63,12 +63,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\Source</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
@@ -89,37 +89,35 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Source\arraystack.h" />
-    <ClInclude Include="Source\binarytree.h" />
     <ClInclude Include="Source\camera.h" />
-    <ClInclude Include="Source\chunk.h" />
-    <ClInclude Include="Source\direct3d.h" />
-    <ClInclude Include="Source\entity.h" />
-    <ClInclude Include="Source\graphics.h" />
+    <ClInclude Include="Source\containers\arraystack.h" />
+    <ClInclude Include="Source\containers\binarytree.h" />
+    <ClInclude Include="Source\containers\linkedstack.h" />
+    <ClInclude Include="Source\containers\list.h" />
+    <ClInclude Include="Source\containers\queue.h" />
+    <ClInclude Include="Source\containers\skiplist.h" />
+    <ClInclude Include="Source\graphics\direct3d.h" />
+    <ClInclude Include="Source\graphics\graphics.h" />
+    <ClInclude Include="Source\graphics\model.h" />
+    <ClInclude Include="Source\graphics\shader.h" />
     <ClInclude Include="Source\input.h" />
-    <ClInclude Include="Source\linkedstack.h" />
-    <ClInclude Include="Source\list.h" />
-    <ClInclude Include="Source\math.h" />
-    <ClInclude Include="Source\model.h" />
-    <ClInclude Include="Source\planet.h" />
-    <ClInclude Include="Source\queue.h" />
-    <ClInclude Include="Source\resource.h" />
-    <ClInclude Include="Source\shader.h" />
-    <ClInclude Include="Source\skiplist.h" />
+    <ClInclude Include="Source\level\chunk.h" />
+    <ClInclude Include="Source\level\planet.h" />
+    <ClInclude Include="Source\math2.h" />
     <ClInclude Include="Source\system.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\camera.cpp" />
-    <ClCompile Include="Source\chunk.cpp" />
-    <ClCompile Include="Source\direct3d.cpp" />
-    <ClCompile Include="Source\graphics.cpp" />
+    <ClCompile Include="Source\graphics\direct3d.cpp" />
+    <ClCompile Include="Source\graphics\graphics.cpp" />
+    <ClCompile Include="Source\graphics\model.cpp" />
+    <ClCompile Include="Source\graphics\modelfactory.cpp" />
+    <ClCompile Include="Source\graphics\shader.cpp" />
     <ClCompile Include="Source\input.cpp" />
-    <ClCompile Include="Source\model.cpp" />
-    <ClCompile Include="Source\modelfactory.cpp" />
-    <ClCompile Include="Source\planet.cpp" />
-    <ClCompile Include="Source\shader.cpp" />
+    <ClCompile Include="Source\level\chunk.cpp" />
+    <ClCompile Include="Source\level\planet.cpp" />
     <ClCompile Include="Source\system.cpp" />
     <ClCompile Include="Source\winmain.cpp" />
     <ClCompile Include="stdafx.cpp" />
