--- a/Quasar/Quasar/Quasar.vcxproj
+++ b/Quasar/Quasar/Quasar.vcxproj
@@ -10,6 +10,53 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\camera.cpp" />
+    <ClCompile Include="Source\graphics\direct3d.cpp" />
+    <ClCompile Include="Source\graphics\graphics.cpp" />
+    <ClCompile Include="Source\graphics\model.cpp" />
+    <ClCompile Include="Source\graphics\modelfactory.cpp" />
+    <ClCompile Include="Source\graphics\shader.cpp" />
+    <ClCompile Include="Source\input.cpp" />
+    <ClCompile Include="Source\level\chunk.cpp" />
+    <ClCompile Include="Source\level\planet.cpp" />
+    <ClCompile Include="Source\system.cpp" />
+    <ClCompile Include="Source\winmain.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Quasar.aps" />
+    <None Include="Quasar.ico" />
+    <None Include="Quasar.vcxproj" />
+    <None Include="Quasar.vcxproj.user" />
+    <None Include="shaders.hlsl" />
+    <None Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Headers\camera.h" />
+    <ClInclude Include="Headers\containers\arraylist.h" />
+    <ClInclude Include="Headers\containers\arraystack.h" />
+    <ClInclude Include="Headers\containers\binarytree.h" />
+    <ClInclude Include="Headers\containers\linkedstack.h" />
+    <ClInclude Include="Headers\containers\queue.h" />
+    <ClInclude Include="Headers\containers\skiplist.h" />
+    <ClInclude Include="Headers\entity.h" />
+    <ClInclude Include="headers\graphics\direct3d.h" />
+    <ClInclude Include="headers\graphics\graphics.h" />
+    <ClInclude Include="headers\graphics\model.h" />
+    <ClInclude Include="Headers\graphics\shader.h" />
+    <ClInclude Include="headers\input.h" />
+    <ClInclude Include="Headers\level\chunk.h" />
+    <ClInclude Include="Headers\level\planet.h" />
+    <ClInclude Include="Headers\math2.h" />
+    <ClInclude Include="Headers\system.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Quasar.rc" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{DA52C057-B051-46A2-A420-964DE9EAA545}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -40,11 +87,15 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)$(Configuration)</OutDir>
+    <IntDir>$(SolutionDir)$(Configuration)\temp\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Configuration)</OutDir>
+    <IntDir>$(SolutionDir)$(Configuration)\temp\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -52,7 +103,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\Headers</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -68,7 +119,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\Source</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\Headers</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
@@ -81,50 +132,6 @@
       </IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <None Include="shader-error.txt" />
-    <None Include="shaders.hlsl" />
-    <None Include="small.ico" />
-    <None Include="Quasar.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="resource.h" />
-    <ClInclude Include="Source\camera.h" />
-    <ClInclude Include="Source\containers\arraystack.h" />
-    <ClInclude Include="Source\containers\binarytree.h" />
-    <ClInclude Include="Source\containers\linkedstack.h" />
-    <ClInclude Include="Source\containers\list.h" />
-    <ClInclude Include="Source\containers\queue.h" />
-    <ClInclude Include="Source\containers\skiplist.h" />
-    <ClInclude Include="Source\graphics\direct3d.h" />
-    <ClInclude Include="Source\graphics\graphics.h" />
-    <ClInclude Include="Source\graphics\model.h" />
-    <ClInclude Include="Source\graphics\shader.h" />
-    <ClInclude Include="Source\input.h" />
-    <ClInclude Include="Source\level\chunk.h" />
-    <ClInclude Include="Source\level\planet.h" />
-    <ClInclude Include="Source\math2.h" />
-    <ClInclude Include="Source\system.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\camera.cpp" />
-    <ClCompile Include="Source\graphics\direct3d.cpp" />
-    <ClCompile Include="Source\graphics\graphics.cpp" />
-    <ClCompile Include="Source\graphics\model.cpp" />
-    <ClCompile Include="Source\graphics\modelfactory.cpp" />
-    <ClCompile Include="Source\graphics\shader.cpp" />
-    <ClCompile Include="Source\input.cpp" />
-    <ClCompile Include="Source\level\chunk.cpp" />
-    <ClCompile Include="Source\level\planet.cpp" />
-    <ClCompile Include="Source\system.cpp" />
-    <ClCompile Include="Source\winmain.cpp" />
-    <ClCompile Include="stdafx.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Quasar.rc" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
