--- a/Quasar/Quasar.vcxproj
+++ b/Quasar/Quasar.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="Headers\math\Vector.h" />
     <ClInclude Include="Headers\Player.h" />
     <ClInclude Include="Headers\System.h" />
+    <ClInclude Include="Headers\Window.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +126,7 @@
     <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Source\System.cpp" />
+    <ClCompile Include="Source\Window.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
