--- a/Quasar/Quasar.vcxproj
+++ b/Quasar/Quasar.vcxproj
@@ -83,7 +83,7 @@
     <IntDir>$(SolutionDir)\Intermediate\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>true</LinkIncremental>
+    <LinkIncremental>false</LinkIncremental>
     <IncludePath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;C:\sfml2\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;C:\sfml2\lib;$(LibraryPath)</LibraryPath>
     <IntDir>$(SolutionDir)\Intermediate\$(Configuration)\</IntDir>
@@ -161,9 +161,9 @@
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\Headers\;C:\Users\Conrad\Desktop\bullet-2.79\src\</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessToFile>false</PreprocessToFile>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -177,6 +177,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Headers\entity\Entity.h" />
+    <ClInclude Include="Headers\graphics\BlockRenderer.h" />
     <ClInclude Include="Headers\graphics\Graphics.h" />
     <ClInclude Include="Headers\graphics\IRender.h" />
     <ClInclude Include="Headers\graphics\Model.h" />
@@ -194,14 +196,18 @@
     <ClInclude Include="Headers\math\Color.h" />
     <ClInclude Include="Headers\math\Math.h" />
     <ClInclude Include="Headers\math\Vector.h" />
-    <ClInclude Include="Headers\Player.h" />
+    <ClInclude Include="Headers\player\PickOutline.h" />
+    <ClInclude Include="Headers\player\Player.h" />
+    <ClInclude Include="Headers\player\Crosshair.h" />
     <ClInclude Include="Headers\Res.h" />
     <ClInclude Include="Headers\StaticInit.h" />
     <ClInclude Include="Headers\System.h" />
     <ClInclude Include="Headers\Window.h" />
+    <ClInclude Include="Headers\graphics\Scene.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\graphics\BlockRenderer.cpp" />
     <ClCompile Include="Source\graphics\Graphics.cpp" />
     <ClCompile Include="Source\graphics\Model.cpp" />
     <ClCompile Include="Source\graphics\Shader.cpp" />
@@ -212,8 +218,10 @@
     <ClCompile Include="Source\level\Block.cpp" />
     <ClCompile Include="Source\level\Chunk.cpp" />
     <ClCompile Include="Source\level\World.cpp" />
-    <ClCompile Include="Source\Player.cpp" />
+    <ClCompile Include="Source\player\PickOutline.cpp" />
+    <ClCompile Include="Source\player\Player.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Source\player\Crosshair.cpp" />
     <ClCompile Include="Source\Res.cpp" />
     <ClCompile Include="Source\System.cpp" />
     <ClCompile Include="Source\Window.cpp" />
