--- a/Quasar/Quasar.vcxproj
+++ b/Quasar/Quasar.vcxproj
@@ -178,6 +178,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Headers\entity\Entity.h" />
+    <ClInclude Include="Headers\Game.h" />
     <ClInclude Include="Headers\graphics\BlockRenderer.h" />
     <ClInclude Include="Headers\graphics\Graphics.h" />
     <ClInclude Include="Headers\graphics\IRender.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\graphics\BlockRenderer.cpp" />
     <ClCompile Include="Source\graphics\Graphics.cpp" />
     <ClCompile Include="Source\graphics\Model.cpp" />
