--- a/Cubiverse/Cubiverse.vcxproj
+++ b/Cubiverse/Cubiverse.vcxproj
@@ -21,7 +21,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{60B677E0-0C69-4211-8563-B2E3F32D9A61}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Quasar</RootNamespace>
+    <RootNamespace>Cubiverse</RootNamespace>
+    <ProjectName>Cubiverse</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -245,7 +246,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Quasar.vcxproj" />
+    <None Include="Cubiverse.vcxproj" />
     <None Include="res\color.f.glsl" />
     <None Include="res\color.v.glsl" />
     <None Include="res\block.f.glsl" />
